<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fleury.marc.mynews.controllers.activities.SearchActivity">

    <!-- Toolbar -->
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp">

        <!-- EditText -->
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/activity_search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notification_editText_hint"
            android:textColorHint="@color/thirdColor"
            android:textCursorDrawable="@drawable/color_cursor"
            app:backgroundTint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingEnd="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beginDate"
                    android:textColor="@color/thirdColor" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/beginDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/color_cursor"
                    app:backgroundTint="@color/thirdColor"
                    android:drawableEnd="@drawable/baseline_arrow_drop_down_black_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/endDate"
                    android:textColor="@color/thirdColor"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/endDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    app:backgroundTint="@color/thirdColor"
                    android:drawableEnd="@drawable/baseline_arrow_drop_down_black_24" />
            </LinearLayout>

        </LinearLayout>

        <!-- CheckBox -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/search_check_arts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_one"
                    android:textColor="@color/mainColor"
                    app:theme="@style/CheckBoxStyle" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/search_check_books"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_two"
                    android:textColor="@color/mainColor"
                    app:theme="@style/CheckBoxStyle" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/search_check_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_three"
                    android:textColor="@color/mainColor"
                    app:theme="@style/CheckBoxStyle" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/search_check_politics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_four"
                    android:textColor="@color/mainColor"
                    app:theme="@style/CheckBoxStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/search_check_science"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_five"
                    android:textColor="@color/mainColor"
                    app:theme="@style/CheckBoxStyle" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/search_check_sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_six"
                    android:textColor="@color/mainColor"
                    app:theme="@style/CheckBoxStyle" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/search_check_tech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_seven"
                    android:textColor="@color/mainColor"
                    app:theme="@style/CheckBoxStyle" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/search_check_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_eight"
                    android:textColor="@color/mainColor"
                    app:theme="@style/CheckBoxStyle" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/activity_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/searchButton"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>
